# Pixles

./: .gitignore  AGENTS.md  AI.md  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.gradle.kts  gradle.properties  justfile  lefthook.yml  settings.gradle.kts
.github/: FUNDING.yml  (+2 more)
capsule-api/: .env.example  Cargo.toml  Containerfile  README.md  compose.yaml
capsule-api/auth/: Cargo.toml  README.md
capsule-api/auth/src/: config.rs  constants.rs  lib.rs  oidc.rs  roles.rs
capsule-api/entity/: Cargo.toml
capsule-api/entity/src/: album_share.rs  asset_stack.rs  face.rs  memory.rs  passkey.rs  share_link.rs  smart_tag.rs  user.rs
capsule-api/environment/: Cargo.toml
capsule-api/environment/src/: constants.rs  lib.rs  wrapper.rs
capsule-api/media/: Cargo.toml
capsule-api/media/src/: lib.rs
capsule-api/migration/: Cargo.toml
capsule-api/migration/src/: lib.rs  m20260322_000000_change_file_hash_to_blake3.rs
capsule-api/model/: Cargo.toml
capsule-api/model/src/: passkey.rs  stack.rs  user.rs
capsule-api/service/: Cargo.toml
capsule-api/service/src/: lib.rs  mutation.rs  query.rs  storage.rs
capsule-api/src/: lib.rs  main.rs
capsule-api/sync/: Cargo.toml  README.md
capsule-api/sync/src/: config.rs  lib.rs
capsule-api/testing/: Cargo.toml  README.md
capsule-api/testing/src/: lib.rs  schema.rs
capsule-api/upload/: Cargo.toml  README.md
capsule-api/upload/src/: config.rs  error.rs  lib.rs
pixles-api/: .clippy.toml  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Containerfile  README.md  build.rs  bun.lockb  compose.yaml  docker-compose.yml  drizzle.config.ts  openapi.json  package.json  tsconfig.json
pixles-api/auth/: Cargo.toml  README.md  generate_hash.rs
pixles-api/auth/src/: claims.rs  config.rs  constants.rs  error.rs  errors.rs  lib.rs  responses.rs  service.rs  session.rs  state.rs  utils.rs  validation.rs
pixles-api/auth/tests/: integration_tests.rs
pixles-api/docs/: Cargo.toml
pixles-api/docs/src/: lib.rs
pixles-api/entity/: Cargo.toml
pixles-api/entity/src/: album.rs  album_share.rs  asset.rs  asset_smart_tag.rs  face.rs  friendship.rs  lib.rs  memory.rs  owner.rs  owner_member.rs  person.rs  share_link.rs  smart_tag.rs  stack_member.rs  user.rs
pixles-api/environment/: Cargo.toml
pixles-api/environment/src/: constants.rs  jwt.rs  lib.rs
pixles-api/graphql/: Cargo.toml  README.md
pixles-api/graphql/src/: auth.rs  config.rs  constants.rs  context.rs  environment.rs  hash.rs  jwt.rs  lib.rs  schema.rs  state.rs
pixles-api/media/: Cargo.toml
pixles-api/media/src/: config.rs  error.rs  state.rs
pixles-api/metadata/: Cargo.toml  README.md  build.rs
pixles-api/metadata/src/: config.rs  lib.rs
pixles-api/migration/: Cargo.toml
pixles-api/migration/src/: lib.rs  m20250210_000000_initial_schema.rs  m20250210_023042_initialize.rs  m20250302_000000_add_registered_via.rs  m20251211_000000_auth_completion.rs  m20251226_010000_upload_schema.rs  main.rs
pixles-api/model/: Cargo.toml
pixles-api/model/src/: album.rs  asset.rs  errors.rs  lib.rs  user.rs
pixles-api/service/: Cargo.toml
pixles-api/service/src/: lib.rs  mutation.rs  query.rs  storage.rs
pixles-api/service/tests/: mock.rs  prepare.rs
pixles-api/src/: env.ts  environment.rs  index.ts  lib.rs  main.rs
pixles-api/src/db/: index.ts  schema.ts
pixles-api/src/lib/: constants.ts
pixles-api/src/models/: activity.ts  album.ts  dashboard.ts  photo.ts  user.ts
pixles-api/src/routes/: version.rs
pixles-api/sync/: Cargo.toml  README.md  build.rs
pixles-api/sync/src/: lib.rs
pixles-api/testing/: Cargo.toml
pixles-api/testing/src/: common.rs  schema.rs
pixles-api/upload/: Cargo.toml
pixles-api/upload/src/: config.rs  error.rs  lib.rs  metadata.rs  routes.rs  state.rs
pixles-cli/: Cargo.toml  README.md  build.gradle.kts
pixles-cli/entity/: Cargo.toml
pixles-cli/entity/src/: asset.rs  lib.rs
pixles-cli/migration/: Cargo.toml
pixles-cli/migration/src/: lib.rs  m20250718_000000_initialize.rs
pixles-cli/src/: config.rs  db.rs  main.rs  status.rs
pixles-cli/src/cli/: commands.rs  mod.rs
pixles-cli/src/import/: group.rs  mod.rs  operations.rs  plan.rs
pixles-cli/src/metadata/: file.rs  filter.rs
pixles-cli/src/models/: file.rs  mod.rs  uuid.rs
pixles-cli/src/utils/: directories.rs  files.rs  hash.rs  mod.rs
pixles-core/: Cargo.toml  build.gradle.kts
pixles-core-rust/: Cargo.toml
pixles-core-rust/src/: constants.rs  lib.rs
pixles-core-rust/src/import/: group.rs  mod.rs  plan.rs  scan.rs  upload.rs
pixles-core-rust/src/metadata/: file.rs  mod.rs
pixles-core-rust/src/models/: album.rs  asset.rs  mod.rs
pixles-core-rust/src/utils/: file.rs  hash.rs
pixles-core/src/: constants.rs
pixles-core/src/db/: driver.rs  rows.rs
pixles-core/src/domain/: capture_tz_source.rs  detection_method.rs  import_mode.rs  member_role.rs  mod.rs
pixles-core/src/exif/: extract.rs  mod.rs  timezone.rs
pixles-core/src/import/: executor_cancellation.rs  group.rs  mod.rs  plan.rs  planner.rs  progress.rs  scanner.rs  special.rs  upload.rs
pixles-core/src/metadata/: types.rs
pixles-core/src/sidecar/: io.rs  mod.rs  stack_hint.rs
pixles-media/: Cargo.toml  README.md  conanfile.py  meson.build
pixles-media/examples/: extract_metadata.rs  foo.rs  generate_derivative.rs  generate_lqip.rs
pixles-media/src/: lib.rs  pixles_media.cpp  pixles_media.h
pixles-media/src/core/: mod.rs  transcode.rs
pixles-media/src/fs/: ext.rs  mod.rs
pixles-media/src/image/: buffer.rs  jpeg.rs  lqip.rs  metadata.rs  mod.rs  presets.rs  rgba.rs  types.rs
pixles-media/src/metadata/: geo.rs  icc.rs  mod.rs  orientation.rs  xmp.rs
pixles-media/src/video/: mod.rs  presets.rs
pixles-media/test_package/: conanfile.py  meson.build
pixles-media/test_package/src/: example.cpp
pixles-sdk/: Cargo.toml  README.md  generate_openapi.sh  openapi.json
pixles-sdk/examples/: auth_flow.rs
pixles-sdk/src/: lib.rs  upload.rs
pixles-vision/: .gitignore  README.md  pyproject.toml
pixles-vision/notebooks/: blip2.ipynb  example.ipynb
(+488 files in other folders)
