[workspace]
members = [
    "pixles-api",
    "pixles-api/auth",
    "pixles-api/graphql",
    "pixles-api/service",
    "pixles-api/entity",
    "pixles-api/metadata",
    "pixles-api/migration",
    "pixles-cli",
    "pixles-core-rust",
]

[workspace.dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["http2", "macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
eyre = "0.6.12"
futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
jsonwebtoken = "9.3.0"
nanoid = "0.4.0"
ring = "0.17.14"
sea-orm = { version = "1.1.10", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
sea-orm-migration = { version = "1.1.10", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
utoipa = { version = "5.3.1", features = [
    "axum_extras",
    "chrono",
    "debug",
    "url",
    "uuid",
    "macros",
] }
utoipa-axum = { version = "0.2.0" }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"

[profile.release]
lto = "thin"
codegen-units = 1
