[package]
name = "capsule-api"
version.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "capsule-api"

[dependencies]
capsule-api-auth = { path = "./auth", optional = true }
capsule-api-library = { path = "./library", optional = true }
capsule-api-media = { path = "./media", optional = true }
# TODO: Re-enable when upload is production-ready
capsule-api-upload = { path = "./upload", optional = true }
capsule-api-sync = { path = "./sync", optional = true }
capsule-api-environment = { path = "./environment" }
capsule-api-migration = { path = "./migration" }
salvo = { workspace = true }
color-eyre = "0.6.3"
eyre = { workspace = true }
listenfd = "1.0.1"
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5.26", features = ["derive"] }

[features]
default = ["full"]
full = ["auth", "upload", "media", "library", "sync", "openapi"]
h2c = ["salvo/http2-cleartext", "salvo/rustls"]
auth = ["capsule-api-auth", "capsule-api-environment/auth"]
library = ["capsule-api-library", "capsule-api-environment/graphql"]
upload = ["capsule-api-upload", "capsule-api-environment/upload"]
media = ["capsule-api-media", "capsule-api-environment/media"]
sync = ["capsule-api-sync", "capsule-api-environment/sync", "h2c"]
openapi = []
