[package]
name = "pixles-api"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "pixles-api"

[dependencies]
pixles-api-auth = { path = "./auth", optional = true }
pixles-api-docs = { path = "./docs", optional = true }
pixles-api-graphql = { path = "./graphql", optional = true }
pixles-api-upload = { path = "./upload", optional = true }
pixles-api-environment = { path = "./environment" }
pixles-api-metadata = { path = "./metadata", optional = true }
pixles-api-migration = { path = "./migration" }
axum = { workspace = true }
color-eyre = "0.6.3"
eyre = { workspace = true }
listenfd = "1.0.1"
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
futures-util = "0.3.31"
async-stream = "0.3.6"
serde = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

[features]
default = ["auth", "graphql", "upload", "metadata", "openapi"]
auth = ["pixles-api-auth", "pixles-api-environment/auth"]
graphql = ["pixles-api-graphql", "pixles-api-environment/graphql"]
metadata = ["pixles-api-metadata", "pixles-api-environment/metadata"]
upload = [
    "pixles-api-upload",
    "pixles-api-docs/upload",
    "pixles-api-environment/upload",
]
openapi = ["pixles-api-docs/openapi"]
