[package]
name = "pixles-api"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "pixles-api"

[dependencies]
pixles-api-auth = { path = "./auth", optional = true }
# TODO: Re-enable when graphql is production-ready
# pixles-api-graphql = { path = "./graphql", optional = true }
# TODO: Re-enable when upload is production-ready
# pixles-api-upload = { path = "./upload", optional = true }
pixles-api-environment = { path = "./environment" }
# TODO: Re-enable when metadata is production-ready
# pixles-api-metadata = { path = "./metadata", optional = true }
pixles-api-migration = { path = "./migration" }
salvo = { workspace = true }
color-eyre = "0.6.3"
eyre = { workspace = true }
listenfd = "1.0.1"
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["auth", "openapi"]
auth = ["pixles-api-auth", "pixles-api-environment/auth"]
# TODO: Re-enable when graphql is production-ready
# graphql = ["pixles-api-graphql", "pixles-api-environment/graphql"]
# TODO: Re-enable when metadata is production-ready
# metadata = ["pixles-api-metadata", "pixles-api-environment/metadata"]
# TODO: Re-enable when upload is production-ready
# upload = [
#     "pixles-api-upload",
#     "pixles-api-environment/upload",
# ]
openapi = []
