[package]
name = "pixles-api"
version.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "pixles-api"

[dependencies]
pixles-api-auth = { path = "./auth", optional = true }
pixles-api-library = { path = "./library", optional = true }
pixles-api-media = { path = "./media", optional = true }
# TODO: Re-enable when upload is production-ready
pixles-api-upload = { path = "./upload", optional = true }
pixles-api-sync = { path = "./sync", optional = true }
pixles-api-environment = { path = "./environment" }
pixles-api-migration = { path = "./migration" }
salvo = { workspace = true }
color-eyre = "0.6.3"
eyre = { workspace = true }
listenfd = "1.0.1"
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5.26", features = ["derive"] }

[features]
default = ["full"]
full = ["auth", "upload", "media", "library", "sync", "openapi"]
h2c = ["salvo/http2-cleartext", "salvo/rustls"]
auth = ["pixles-api-auth", "pixles-api-environment/auth"]
library = ["pixles-api-library", "pixles-api-environment/graphql"]
upload = ["pixles-api-upload", "pixles-api-environment/upload"]
media = ["pixles-api-media", "pixles-api-environment/media"]
sync = ["pixles-api-sync", "pixles-api-environment/sync", "h2c"]
openapi = []
