[package]
name = "pixles-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pixles"
path = "src/main.rs"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.3"
colored = "3.0.0"
directories = "6.0"
eyre = { workspace = true }
futures = "0.3.31"
humansize = "2.1"
nanoid = "0.4.0"
sea-orm = { version = "1.1.10", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "debug-print",
] }
sea-orm-migration = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { workspace = true }
sysinfo = "0.36.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.10", features = [
    "env-filter",
    "json",
    "fmt",
] }
uuid = { version = "1.11.0", features = ["v7"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }


[profile.release]
lto = "thin"
codegen-units = 1
