[package]
name = "pixles-core-rust"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
globset = "0.4.16"
indexmap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
blake3 = { workspace = true }
