[package]
name = "pixles-media"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
file-format = { workspace = true, optional = true }
indexmap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
thumbhash = "0.1.0"
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = ["fs"]
fs = ["file-format"]
