[package]
name = "pixles-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

uuid = { version = "1.11.0", features = ["v7", "serde"] }
progenitor = { version = "0.11.2" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v7"] }
