[project]
name = "pixles-vision"
version = "0.1.0"
description = "Cutting-edge computer vision features for Pixles"
authors = [
    { name = "Justin Chung", email = "20733699+justin13888@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
hello = "src.pixles_vision:hello"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pixles_vision"]
