[package]
name = "capsule-api-auth"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
capsule-api-environment = { path = "../environment", features = ["auth"] }
capsule-api-model = { path = "../model" }
capsule-api-service = { path = "../service", features = ["auth"] }
argon2 = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
eyre = { workspace = true }
jsonwebtoken = { workspace = true }
nanoid = { workspace = true }
redis = { workspace = true }
salvo = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
ring = { workspace = true }
base64 = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
async-trait = "0.1.89"
totp-rs = { version = "5.7.0", features = ["gen_secret", "otpauth"] }
webauthn-rs = { version = "0.5", features = [
    "danger-allow-state-serialisation",
] }

[build-dependencies]
tonic-prost-build = { workspace = true }

[features]
default = ["server"]
server = []

[dev-dependencies]
environment = { path = "../environment", package = "capsule-api-environment" }
migration = { path = "../migration", package = "capsule-api-migration" }
service = { path = "../service", package = "capsule-api-service" }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
mime = "0.3"
tracing-subscriber = { workspace = true }
base64 = "0.22.1"
sea-orm-migration = { workspace = true }
salvo = { workspace = true, features = ["test"] }
totp-rs = { version = "5.7.0", features = ["gen_secret", "otpauth"] }
