[package]
name = "capsule-api-media"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "media"
path = "src/lib.rs"

[dependencies]
capsule-api-auth = { path = "../auth" }
capsule-api-entity = { path = "../entity" }
capsule-api-environment = { path = "../environment", features = ["media"] }
capsule-api-model = { path = "../model" }
capsule-api-service = { path = "../service" }
derive_more = { workspace = true, features = ["from"] }
eyre = { workspace = true }
jsonwebtoken = { workspace = true }
salvo = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
