[package]
name = "capsule-api-testing"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "testing"
path = "src/lib.rs"

[dependencies]
capsule-api-entity = { path = "../entity" }
capsule-api-migration = { path = "../migration" }
tokio = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
uuid.workspace = true
dotenvy = "0.15.7"
thiserror = { workspace = true }
