[package]
name = "capsule-api-upload"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "upload"
path = "src/lib.rs"

[dependencies]
capsule-api-auth = { path = "../auth" }
capsule-api-entity = { path = "../entity" }
capsule-api-environment = { path = "../environment", features = ["upload"] }
capsule-api-model = { path = "../model" }
capsule-api-service = { path = "../service" }
capsule-core = { path = "../../capsule-core" }
capsule-media = { path = "../../capsule-media" }
bb8-redis = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
salvo = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
nanoid = { workspace = true }
indexmap = { workspace = true }
bytes = { workspace = true }
jsonwebtoken = { workspace = true }
libc = "0.2.180"
