[package]
name = "pixles-api-auth"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
pixles-api-docs = { path = "../docs", optional = true }
pixles-api-entity = { path = "../entity" }
pixles-api-environment = { path = "../environment", features = ["auth"] }
pixles-api-model = { path = "../model" }
pixles-api-service = { path = "../service" }
axum = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
jsonwebtoken = { workspace = true }
nanoid = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
aide = { workspace = true }
schemars = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager"] }
bb8-redis = "0.26.0"
bb8 = "0.9.1"
async-trait = "0.1.89"
indexmap = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[features]
default = ["server"]
server = ["pixles-api-docs"]

[dev-dependencies]
environment = { path = "../environment", package = "pixles-api-environment" }
migration = { path = "../migration", package = "pixles-api-migration" }
service = { path = "../service", package = "pixles-api-service" }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
mime = "0.3"
tracing-subscriber = { workspace = true }
tower = { version = "0.5.2" }
base64 = "0.22.1"
sea-orm-migration = { workspace = true }
