[package]
name = "pixles-api-auth"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
pixles-api-entity = { path = "../entity" }
pixles-api-environment = { path = "../environment", features = ["auth"] }
pixles-api-model = { path = "../model" }
pixles-api-service = { path = "../service" }
argon2 = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
jsonwebtoken = { workspace = true }
nanoid = { workspace = true }
redis = { workspace = true }
salvo = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
ring = { workspace = true }
base64 = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
async-trait = "0.1.89"

[build-dependencies]
tonic-prost-build = { workspace = true }

[features]
default = ["server"]
server = []

[dev-dependencies]
environment = { path = "../environment", package = "pixles-api-environment" }
migration = { path = "../migration", package = "pixles-api-migration" }
service = { path = "../service", package = "pixles-api-service" }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
mime = "0.3"
tracing-subscriber = { workspace = true }
base64 = "0.22.1"
sea-orm-migration = { workspace = true }
salvo = { workspace = true, features = ["test"] }
