[package]
name = "pixles-api-entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
nanoid = { workspace = true }
serde = { version = "1", features = ["derive"] }
sea-orm = { workspace = true }
