[package]
name = "pixles-api-environment"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "environment"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
dotenvy = "0.15.7"
eyre = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
graphql = []
upload = []
metadata = []
