[package]
name = "pixles-api-environment"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "environment"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
dotenvy = "0.15.7"
eyre = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
auth = []
graphql = []
upload = []
media = []
sync = []
