[package]
name = "pixles-api-graphql"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "graphql"
path = "src/lib.rs"

[dependencies]
pixles-api-entity = { path = "../entity" }
pixles-api-environment = { path = "../environment" }
pixles-api-service = { path = "../service" }
async-graphql = { version = "7.0.11", features = [
    "apollo_persisted_queries",
    "chrono",
    "dataloader",
    "log",
    "opentelemetry",
    "secrecy",
    "tracing",
    "unblock",
    "uuid",
    "url",
] }
async-graphql-axum = "7.0.11"
axum = { workspace = true }
eyre = { workspace = true }
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
sea-orm = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.44.1", features = ["full"] }
tracing = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
ring = { workspace = true }
base64 = "0.22.1"
secrecy = { workspace = true }
nanoid = { workspace = true }
argon2 = "0.5.3"
