[package]
name = "pixles-api-graphql"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "graphql"
path = "src/lib.rs"

[dependencies]
pixles-api-auth = { path = "../auth" }
pixles-api-entity = { path = "../entity" }
pixles-api-environment = { path = "../environment" }
pixles-api-service = { path = "../service" }
async-graphql = { version = "7.0.11", features = [
    "apollo_persisted_queries",
    "chrono",
    "dataloader",
    "log",
    "opentelemetry",
    "secrecy",
    "tracing",
    "unblock",
    "uuid",
    "url",
] }
async-graphql-axum = "7.0.17"
axum = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
nanoid = { workspace = true }
argon2 = { workspace = true }
# TODO: argon2 could be removed in the near future from graphql package
