[package]
name = "pixles-api-media"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "media"
path = "src/lib.rs"

[dependencies]
pixles-api-auth = { path = "../auth" }
pixles-api-entity = { path = "../entity" }
pixles-api-environment = { path = "../environment", features = ["media"] }
pixles-api-model = { path = "../model" }
pixles-api-service = { path = "../service" }
derive_more = { workspace = true, features = ["from"] }
eyre = { workspace = true }
jsonwebtoken = { workspace = true }
salvo = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
