[package]
name = "pixles-api-metadata"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "metadata"
path = "src/lib.rs"

[dependencies]
pixles-api-environment = { path = "../environment", features = ["metadata"] }
anyhow = { workspace = true }
axum = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
# uuid = { workspace = true }
# chrono = { workspace = true }
tonic = "0.13.0"
prost = "0.13.5"
tonic-health = "0.13.0"
tonic-types = "0.13.0"

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["prost"] }
