[package]
name = "pixles-api-metadata"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "metadata"
path = "src/lib.rs"

[dependencies]
pixles-api-environment = { path = "../environment", features = ["metadata"] }
axum = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
# uuid = { workspace = true }
# chrono = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-health = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
