[package]
name = "pixles-api-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
